# dl-exercises-fau

./: .gitignore  .pdm.toml  README.md  dispatch.py  log.txt  pyproject.toml
.github/workflows/: Run tests.yml  python-app.yml
ex_0/src_to_implement/: .pdm.toml  main.py  pattern.py
ex_0/src_to_implement_pranto/: NumpyTests.py  generator.py  main.py  pattern.py  pyproject.toml
ex_0/src_to_implement_sujit/: NumpyTests.py  generator.py  main.py  pattern.py
ex_1/src_to_implement/: .pdm.toml  NeuralNetwork.py  NeuralNetworkTests.py  pyproject.toml  requirements.txt
ex_1/src_to_implement/Layers/: Base.py  FullyConnected.py  Helpers.py  ReLU.py  SoftMax.py
ex_1/src_to_implement/Optimization/: Loss.py  Optimizers.py
ex_2/src_to_implement/: NeuralNetwork.py  NeuralNetworkTests.py  SoftConvTests.py  log.txt
ex_2/src_to_implement/Layers/: Base.py  Conv.py  Flatten.py  FullyConnected.py  Helpers.py  Initializers.py  Pooling.py  ReLU.py  SoftMax.py  __init__.py
ex_2/src_to_implement/Optimization/: Loss.py  Optimizers.py
ex_4/src_to_implement/: PytorchChallengeTests.py  conv_block.py  data.py  export_onnx.py  model.py  providers.py  res_block.py  train.py  trainer.py
