[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Md Badiuzzaman Pranto", email = "prantoamt@gmail.com"},
]
dependencies = [
    "numpy>=1.23.5",
    "matplotlib>=3.6.2",
    "scikit-learn>=1.1.3",
    "tabulate>=0.9.0",
    "scikit-image>=0.19.3",
    "torch==1.13.1",
    "torchvision>=0.14.1",
    "torchaudio>=0.13.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm.scripts]
test_ex_0 = "python ./ex_0/src_to_implement_pranto/NumpyTests.py {args}"
test_ex_1 = "python ./ex_1/src_to_implement/NeuralNetworkTests.py {args}"
test_ex_2 = "python ./ex_2/src_to_implement/NeuralNetworkTests.py {args}"
test = {composite = ["test_ex_0 Bonus",  "test_ex_1 Bonus", "test_ex_2 Bonus"]}
test_ci = {composite = ["test_ex_0",  "test_ex_1", "test_ex_2"]}
format = "black ."

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
formatter = [
    "black>=22.10.0",
]
