[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Md Badiuzzaman Pranto", email = "prantoamt@gmail.com"},
]
dependencies = [
    "numpy>=1.23.5",
    "scikit-learn>=1.1.3",
    "matplotlib>=3.6.2",
    "tabulate>=0.9.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "python main.py"
tests = "python NeuralNetworkTests.py Bonus"
format = "python -m black ."

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
